--- a/index.less
+++ b/index.less
@@ -1,5 +1,6 @@
 @import './src/helper';
-@import './src/logo.less';
+@import './src/grid.less';
+@import './src/frame1.less';
 
 body {
   font-family: 'Roboto', sans-serif;
