--- a/src/frame1.less
+++ b/src/frame1.less
@@ -309,14 +309,11 @@ body {
   color: rgba(0, 0, 0, 0.8);
 }
 
-.conteiner__footer {
+.footer {
   width: 1104px;
   height: 20px;
-  margin: auto;
-}
-
-.footer {
-  margin-top: 108px;
+  margin: 108px auto auto auto;
+  //margin-top: 108px;
   border-top: 1px solid rgba(0, 0, 0, 0.54);
   display: flex;
   justify-content: space-between;
