--- a/src/helper.less
+++ b/src/helper.less
@@ -3,12 +3,12 @@
   margin: 0;
   padding: 0;
 }
-.shapka {
+.header {
   background: #ffffff;
   filter: drop-shadow(0px 4px 24px rgba(0, 0, 0, 0.12));
 }
 
-.shapka__inside {
+.header__inside {
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -20,14 +20,14 @@
   background: rgba(255, 255, 255, 0.005);
 }
 
-.shapka__navigation {
+.header__navigation {
   margin-left: 48px;
   display: flex;
   list-style: none;
   flex-direction: row;
 }
 
-.shapka__link {
+.header__link {
   margin-right: 24px;
   text-decoration: none;
   //padding: 22px 0 22px 0;
@@ -49,7 +49,7 @@
   color: rgba(0, 0, 0, 0.8);
 }
 
-.shapka__logo {
+.header__logo {
   display: block;
   height: 34px;
   width: 150px;
